zeit.content.article changes
============================

1.5.7 (unreleased)
------------------

- Bearbeiten von Rezensionen klarer gemacht (bug #4437).
- Anpassungen für zeit.cms 1.2.4

1.5.6 (2008-10-13)
------------------

- Tests sind jetzt unabhängig vom Standardwert des Copyrights bei Bildern.

1.5.5 (2008-10-01)
------------------

- Article ist ein redaktioneller Inhalt.

1.5.4 (2008-10-01)
------------------

- Anpassungen an zeit.cms 1.2

1.5.3 (2008-08-26)
------------------

- Tests nochmal repariert.

1.5.2 (2008-08-26)
------------------

- Aktualisiert für zope.app.form 3.6.0 und zeit.cms 1.1.6

1.5.1 (2008-08-12)
------------------

- Aktualisiert für zeit.cms 1.1.5

1.5 (2008-07-29)
----------------

- "Kommentare erlaubt" ist in den Kern gewandert.

1.4 (2008-06-26)
----------------

- DailyNL in den Standard-Metadaten (bug #4307).

1.3 (2008-06-23)
----------------

- Tests auf zeit.cms 0.9.22 angepasst.

1.2 (2008-06-16)
----------------

- Asset-View refaktoriert: Verwenden des Asset-Supports aus dem Core.
- "Kommentare zusammenfassen" (bug #3734).

1.1 (2008-05-29)
----------------

- Compatible with zeit.cms 0.9.16


1.0 (2008-05-26)
----------------

- Removed special "syndicated in" which is done via relations now.
- Removed special syndication log, which will be done via zeit.objectlog.

0.9.14 (2008-05-20)
-------------------

- first release after moving article out of zeit.cms core