@@ -144,5 +144,7 @@
     <directory source="resources" include="recension.css" />
   </resourceLibrary>
 
+  <adapter factory=".recension.edit_view_name" name="recensions.html" />
+  <adapter factory=".recension.display_view_name" name="recensions.html" />
 
 </configure>
